fixed spacing on index page

--- a/style.css
+++ b/style.css
@@ -90,10 +90,12 @@ nav img {
 
 .myWorkContainer {
   margin: 0 auto;
+  
 }
 
 .myWork {
   justify-items: center;
+  
 }
 
 #someOfMyWork {
@@ -101,7 +103,8 @@ nav img {
   color: #e61d59;
   font-family: "DM Serif Display", serif;
   font-size: 26px;
-  text-align: center;
+  text-align: left;
+  padding-left: 25px;
 }
 
 #myWorkTitle {
@@ -109,20 +112,20 @@ nav img {
   font-size: 24px;
   text-align: left;
   color: #e61d59;
-  padding-left: 20px;
+  padding-left: 25px;
 }
 
 #myWorkInfo {
   font-family: "Reem Kufi", sans-serif;
   font-size: 16px;
-  padding-left: 20px;
+  padding-left: 25px;
   padding-right: 20px;
   text-align: left;
   margin: 0 auto;
 }
 
 .myWorkImage {
-  padding-top: 30px;
+  padding-top: 60px;
 }
 
 .proj_btn {
@@ -134,9 +137,9 @@ nav img {
   background-color: #e61d59;
   padding: 6px;
   color: white;
-  font-size: 10px;
+  font-size: 13px;
   font-family: "Reem Kufi", sans-serif;
-  padding-left: ;
+  
   
 }
 
@@ -157,8 +160,10 @@ nav img {
   color: #e61d59;
   font-family: "DM Serif Display", serif;
   font-size: 26px;
-  text-align: center;
+  text-align: left;
   margin-top: 30px;
+  padding-left: 25px;
+  padding-top: 40px;
 }
 
 .footer {
